- Fixed bug #47769 (Strange extends PDO)